@@ -1,6 +1,6 @@
 # General defines
 
-version := 1.5.1a
+version := 1.5.2pre
 
 
 # ownership (used by 'make install')
@@ -35,8 +35,8 @@ buildvcl := yes
 
 # Debugging options etc...
 
-debug   := yes
-profile := yes
+debug   := no
+profile := no
 
 
 # endian, etc. support for other hardware
