@@ -2,7 +2,7 @@
  *  ztext.h   - code for class 'zText'- a module that reads compressed text
  *				files: ot and nt using indexs ??.vss
  *
- * $Id: ztext.h,v 1.7 2000/12/07 19:46:38 scribe Exp $
+ * $Id: ztext.h,v 1.8 2000/12/15 09:59:16 scribe Exp $
  *
  * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
  *	CrossWire Bible Society
@@ -33,7 +33,7 @@ class zText : public zVerse, public SWText {
 	bool sameBlock(VerseKey *lastWriteKey, VerseKey *key);
 	int blockType;
 public:
-	zText(const char *ipath, const char *iname = 0, const char *idesc = 0, int blockType = zVerse::CHAPTERBLOCKS, SWCompress *icomp = 0, SWDisplay *idisp = 0);
+	zText(const char *ipath, const char *iname = 0, const char *idesc = 0, int blockType = CHAPTERBLOCKS, SWCompress *icomp = 0, SWDisplay *idisp = 0);
 	virtual ~zText();
 	virtual char *getRawEntry();
 
