@@ -1,6 +1,6 @@
 #include <localemgr.h>
 
-main(int argc, char **argv) {
+int main(int argc, char **argv) {
 	if (argc != 3) {
 		fprintf(stderr, "usage: %s localetest <locale_name> <text>\n", *argv);
 		exit(-1);
